feat: therapy package creation, removed enum DaysOfWeek and replace every usage with java util DaysOfWeek