@@ -1,7 +1,7 @@
 package com.madania.management.service;
 
 import com.madania.management.entity.*;
-import com.madania.management.enums.DayOfWeek;
+
 import com.madania.management.enums.PackageStatus;
 import com.madania.management.enums.SessionStatus;
 import com.madania.management.repository.*;
@@ -9,10 +9,12 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -34,6 +36,10 @@ public class TherapyPackageService {
     public TherapyPackage findPackageById(UUID id) {
         return packageRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Package with not found with id: " + id));
+    }
+
+    public List<DayOfWeek> getDays() {
+        return Arrays.asList(DayOfWeek.values());
     }
 
     @Transactional
@@ -77,6 +83,8 @@ public class TherapyPackageService {
         LocalDate cursor = startDate;
         int sessionNumber = 1;
 
+        System.out.println("Days received: " + days);
+        System.out.println("Days types: " + days.getClass() + " contents type: " + (days.isEmpty() ? "empty" : days.get(0).getClass()));
         while (sessionNumber <= 12 ) {
             if (days.contains((cursor.getDayOfWeek()))) {
                 LocalDateTime startTime = LocalDateTime.of(cursor, preferredTime);
@@ -97,7 +105,7 @@ public class TherapyPackageService {
             cursor = cursor.plusDays(1);
         }
         sessionRepository.saveAll(sessions);
-        therapyPackage.setEndDate(sessions.getLast().getStartTime().toLocalDate());
+        therapyPackage.setEndDate(sessions.get(sessions.size() - 1).getStartTime().toLocalDate());
         packageRepository.save(therapyPackage);
 
         return therapyPackage;
